# block_sparse

./: README.md  build.sh  test_sparse_mat_octave.m
include/: dcsc.h  doubly_compress.h  print_funcs.h  test.h
log/: 23Nov_aux_dcsc_explanation.odt  log&notes.odt
log/ppt/csr/: CSR_visuals.dvi  CSR_visuals.tex  csr_beamer.aux  csr_beamer.tex
log/ppt/dcsc/: dcsc_presentation.aux  dcsc_presentation.tex  dcsc_presentation.vrb
log/ppt/dcsc/images/: index.xcf
src/: CMakeLists.txt  convert_triples_to_csr.cpp  crs.cpp  dcsr.cpp  obj_orient_mat.txt  spgemm.cpp  test.cpp  test_func.cpp  test_tuple.cpp
